fix overflowing json viewer when the value is very long

--- a/apps/studio/src/assets/styles/app/sidebar/json-viewer-sidebar.scss
+++ b/apps/studio/src/assets/styles/app/sidebar/json-viewer-sidebar.scss
@@ -1,4 +1,6 @@
 .json-viewer-sidebar {
+  height: 100%;
+
   .text-editor {
     padding-left: 0.8rem;
   }
