--- a/apps/studio/src/assets/styles/components/json-viewer.scss
+++ b/apps/studio/src/assets/styles/components/json-viewer.scss
@@ -155,7 +155,18 @@
   flex-direction: column;
   padding-bottom: 0.5rem;
 
-  .text-editor {
-    flex: 1;
+  .text-editor-wrapper {
+    flex: 1 1 auto;
+    height: 100%;
+    position:relative;
+
+    .text-editor {
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      height: 100%
+    }
   }
 }
